# Escalation-Details-Report

./: .gitignore  Brand Guidelines.docx  CHANGELOG.md  GENERATE_PPTX_GUIDE.md  README.md  ROADMAP.md  Report Extract.xlsx  chart_renderer.py  client_config.yaml  client_registry.py  config_loader.py  constants.py  data_parser.py  escalation_report_enhanced-3.html  generate_presentation.py  helpers.py  insight_generator.py  interactive_upload.py  metrics_calculator.py  pyproject.toml  report_data.py  requirements-dev.txt  requirements.txt  run.sh  setup.sh  test_branding.py  test_executive_summary.py  your_team_performance.html
BrandGuidelines/docProps/: core.xml
BrandGuidelines/word/: document.xml  fontTable.xml
brand/: README.md  brand-guidelines.md  visual-identity.md
chart_templates/: funnel_chart.html  pie_chart.html  sankey_chart.html  stacked_bar_chart.html  trend_chart.html
clients/: sample.yaml
data/: alert-details-template.xlsx
docs/: CURRENT_STATE.md  DEVELOPER_GUIDE.md  SLIDE_STRUCTURE.md
examples/: escalation_report_enhanced-3.html
output/: escalation_report_2025-12-19.pptx  escalation_report_2025-12-22.pptx  escalation_report_2025-12-23.pptx  escalation_report_2026-01-09.pptx  ~$escalation_report_2025-12-23.pptx
scripts/: batch_generate.sh  convert_logo_to_png.py
slides/: __init__.py  base.py  common.py  executive_summary.py  forward_direction.py  insights.py  protection_achieved.py  threat_landscape.py  value_delivered.py
tests/: conftest.py  test_branding.py  test_data_parser.py  test_executive_summary.py  test_metrics_calculator.py
(+4 files in other folders)
