# Project configuration for Escalation Details Report
# This file configures formatting, linting, and type checking tools.

[project]
name = "escalation-details-report"
version = "1.4.0"
description = "Executive Business Review PowerPoint generator for Critical Start MDR"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.venv
    | venv
    | __pycache__
    | output
    | temp_charts
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
skip = [".git", "venv", ".venv", "__pycache__", "output", "temp_charts"]
known_first_party = ["constants", "helpers", "report_data", "data_parser", "metrics_calculator", "insight_generator", "config_loader", "chart_renderer", "interactive_upload", "slides"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "venv", ".venv", "output", "temp_charts"]
per-file-ignores = [
    "__init__.py:F401",  # Allow unused imports in __init__.py
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["venv", ".venv", "output", "temp_charts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
